--- a/config.yml
+++ b/config.yml
@@ -44,15 +44,15 @@ params:
     assets:
         # disableHLJS: true # to disable highlight.js
         # disableFingerprinting: true
-        favicon: "/../icon/favicon.ico"
-        favicon16x16: "/../icon/favicon16x16.png"
-        favicon32x32: "/../icon/favicon32x32.png"
-        apple_touch_icon: "/../icon/apple_touch_icon.png"
-        safari_pinned_tab: "/../icon/apple_touch_icon.png"
+        favicon: "icon/favicosn.ico"
+        favicon16x16: "icon/favicon16x16.png"
+        favicon32x32: "icon/favicon32x32.png"
+        apple_touch_icon: "icon/apple_touch_icon.png"
+        safari_pinned_tab: "icon/apple_touch_icon.png"
 
     label:
         text: "Home"
-        # icon: ./../../icon/favicon.ico
+        icon: icon/favicon.ico
         iconHeight: 35
 
     # profile-mode
@@ -60,7 +60,7 @@ params:
         enabled: true # needs to be explicitly set
         title: Anis Khan
         subtitle: I write in a text editor
-        imageUrl: https://aniskhan001.github.io/img/profile.jpg
+        imageUrl: img/profile.jpg
         imageWidth: 120
         imageHeight: 120
         imageTitle: Anis Khan
