update GA to v4

--- a/config.yml
+++ b/config.yml
@@ -9,8 +9,7 @@ buildFuture: false
 buildExpired: false
 pluralizeListTitles: false
 
-# googleAnalytics: G-HKTS2WR0QV
-googleAnalytics: UA-52769301-2
+googleAnalytics: G-HKTS2WR0QV
 disqusShortname: aniskhan001
 
 minify:
