--- a/config.yml
+++ b/config.yml
@@ -134,13 +134,9 @@ menu:
     #       weight: 30
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 # pygmentsUseClasses: true
-# markup:
-#     highlight:
-#         # anchorLineNos: true
-#         codeFences: true
-#         guessSyntax: true
-#         lineNos: true
-#         style: monokai
+markup:
+    highlight:
+        style: tomorrow-night-bright
 
 outputs:
     home:
