--- a/config.yml
+++ b/config.yml
@@ -22,7 +22,6 @@ params:
     description: "Enjoying life"
     keywords: [Blog, Tech, Life, PaperMod]
     author: Anis Khan
-    # author: ["Me", "You"] # multiple authors
     images: ["<link or path of image for opengraph, twitter-cards>"]
     DateFormat: "January 2, 2006"
     defaultTheme: auto # dark, light
@@ -38,7 +37,7 @@ params:
     comments: true
     hidemeta: false
     hideSummary: false
-    showtoc: true
+    showtoc: false
     tocopen: false
 
     assets:
@@ -64,11 +63,11 @@ params:
         imageWidth: 120
         imageHeight: 120
         imageTitle: Anis Khan
-        # buttons:
-        #     - name: Life Blogs
-        #       url: life
-        #     - name: Tech Blogs
-        #       url: tech
+        buttons:
+            # - name: Life Blogs
+            #   url: life
+            - name: Tech Blogs
+              url: tech
 
     socialIcons:
         - name: twitter
