--- a/config.yml
+++ b/config.yml
@@ -49,9 +49,9 @@ params:
         safari_pinned_tab: "/icon/apple_touch_icon.png"
 
     label:
-        text: "Home"
-        icon: /icon/favicon.ico
-        iconHeight: 35
+        text: "💥 Home"
+        # icon: /icon/favicon.ico
+        # iconHeight: 35
 
     # profile-mode
     profileMode:
