--- a/config.yml
+++ b/config.yml
@@ -115,29 +115,17 @@ params:
         minMatchCharLength: 0
         keys: ["title", "permalink", "summary", "content"]
 menu:
-    # main:
-    #     - identifier: tech
-    #       name: tech
-    #       url: /tech/
-    #       weight: 5
-    #     - identifier: life
-    #       name: life
-    #       url: /life/
-    #       weight: 5
-    #     - identifier: categories
-    #       name: categories
-    #       pre: <i data-feather="circle"></i>
-    #       url: /categories/
-    #       weight: 10
-    #     - identifier: tags
-    #       name: tags
-    #       url: /tags/
-    #       weight: 20
-    #     - identifier: search
-    #       name: search
-    #       pre: <i class='fa fa-road'></i>
-    #       url: /search/
-    #       weight: 30
+    main:
+        - identifier: tags
+          name: tags 🏷
+          # pre: <i class='fa fa-heart'></i>
+          url: /tags/
+          weight: 10
+        - identifier: search
+          name: search 🔍
+          # pre: <i class='fa fa-road'></i>
+          url: /search/
+          weight: 20
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 # pygmentsUseClasses: true
 markup:
