--- a/config.yml
+++ b/config.yml
@@ -49,7 +49,7 @@ params:
     safari_pinned_tab: "/icon/apple_touch_icon.png"
 
   label:
-    text: "💥 Home"
+    text: 💥 Home
     # icon: /icon/favicon.ico
     # iconHeight: 35
 
@@ -109,12 +109,12 @@ params:
 menu:
   main:
     - identifier: tags
-      name: tags 🏷
+      name: 🏷 tags
       # pre: <i class='fa fa-heart'></i>
       url: /tags/
       weight: 10
     - identifier: search
-      name: search 🔍
+      name: 🔍 search
       # pre: <i class='fa fa-road'></i>
       url: /search/
       weight: 20
