--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,8 @@
 baseURL: "https://aniskhan001.me/"
 title: "Anis Khan"
-paginate: 5
 theme: PaperMod
+pagination:
+  pagerSize: 5
 
 enableRobotsTXT: true
 buildDrafts: false
